[package]
name = "mcserver-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cfb8 = "0.8.1"
cipher = "0.4.4"
crypto = "0.5.1"
once_cell = "1.19.0"
rand = "0.8.5"
rsa = "0.9.6"
snafu = "0.8.2"
uuid = "1.8.0"
